# yolov10-android-ncnn

./: README.md  gradlew.bat  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/yolov10NcnnAndroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  detect.cpp  detect.hpp
app/src/main/java/com/example/yolov10NcnnAndroid/: DetectNcnn.java  MainActivity.java
app/src/main/java/com/example/yolov10NcnnAndroid/analysis/: FullImageAnalyse.java  FullScreenAnalyse.java
app/src/main/java/com/example/yolov10NcnnAndroid/utils/: CameraProcess.java  ImageProcess.java  Recognition.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/yolov10NcnnAndroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
